--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
            <img class="image2" src="bib.jpg" alt="OOPs" >
           <div class="text">
              <h3>About Me</h3>
-            <p>I m a student and cya all .i just do nothing and sit around all day dpong naptihing fuckkk meeeee
+            <p>I m a student and cya all .This some time pass shit yo . (Just a gentlemen in this perverted World.
               <p class="tab-links" onclick="showEducation()">Education</p>
               <p class="tab-links" onclick="showSkills()">Skills</p>
               <p class="tab-links" onclick="showHobbies()">Hobbies</p>
